--- a/milo-examples/server-examples/pom.xml
+++ b/milo-examples/server-examples/pom.xml
@@ -44,6 +44,12 @@
             <version>20.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.milo</groupId>
+            <artifactId>sdk-client</artifactId>
+            <version>0.6.4-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
